--- a/app/index.html
+++ b/app/index.html
@@ -75,6 +75,7 @@
     <script src="bower_components/angular-strap/dist/angular-strap.js"></script>
     <script src="bower_components/angular-strap/dist/angular-strap.tpl.js"></script>
     <script src="bower_components/lodash/lodash.js"></script>
+    <script src="bower_components/angular-google-chart/ng-google-chart.js"></script>
     <!-- endbower -->
     <!-- endbuild -->
 
@@ -91,6 +92,7 @@
         <script src="scripts/directives/stk-stock-row.js"></script>
         <script src="scripts/directives/contenteditable.js"></script>
         <script src="scripts/directives/stk-sign-color.js"></script>
+        <script src="scripts/directives/stk-sign-fade.js"></script>
         <!-- endbuild -->
 </body>
 </html>
